<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.meli.android.meliproductapp.domain.ProductEntity" />

        <variable
            name="currencyPrice"
            type="String" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_120"
                android:layout_marginStart="@dimen/margin_10"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@id/product_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@drawable/ic_camera_alt_black" />

            <TextView
                android:id="@+id/product_title"
                style="@style/ProductListItemTitle"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@{product.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/text_dummy_title" />

            <TextView
                android:id="@+id/product_price"
                style="@style/ProductListItemTitle"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@{currencyPrice}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/product_title"
                tools:text="@string/text_dummy_price" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>